# icnaming

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  README.md  fix_gitpod_path.sh  renovate.json
src/: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmrc  Cargo.toml  README.md  canister_ids.json  canister_ids_local.json  cucumber.js  dfx.json  dfx_package.json  docker-compose.yml  ic-dev-kit.json  it_dev.sh  itt.sh  package-lock.json  package.json  rust-toolchain.toml  sh_build.sh  sh_chmod.sh  sh_deploy.sh  sh_dev_package.sh  sh_did.sh  sh_generate.sh  sh_generate_resolver_operation.sh  sh_go.sh  sh_import_resolver_operation.sh  sh_init.sh  sh_load_state.sh  sh_package.sh  sh_post_container_created.sh  sh_post_container_start.sh  sh_publish.sh  sh_reinstall.sh  sh_setup_dev.sh  sh_start.sh  sh_test.sh  sh_upgrade.sh  start.sh  (+2 more)
src/.devcontainer/: Dockerfile  config.toml  devcontainer.json
src/canister_ids/: ax.json  prod.json  production.json  staging.json  test.json
src/canisters/common/: Cargo.toml
src/canisters/common/src/: actor.rs  canister_api.rs  constants.rs  dto.rs  errors.rs  http.rs  ic_api.rs  ic_logger.rs  lib.rs  state.rs
src/canisters/cycles_minting/: Cargo.toml
src/canisters/cycles_minting/src/: actor.rs  cycles_minting.did  (+1 more)
src/canisters/favorites/: Cargo.toml  build.rs
src/canisters/icnaming_ledger/: Cargo.toml
src/canisters/mystery_box/: Cargo.toml
src/canisters/naming_marketplace/: Cargo.toml
src/canisters/registrar/: Cargo.toml  build.rs
src/canisters/registrar_control_gateway/: Cargo.toml  build.rs
src/canisters/registry/: Cargo.toml
src/canisters/resolver/: Cargo.toml
src/canisters/test_common/: Cargo.toml
src/common/build_common/: Cargo.toml
src/common/common/: Cargo.toml  build.rs
src/common/common_actor/: Cargo.toml
src/common/test_common/: Cargo.toml
src/configs/dev/: canister_ids_cycles_minting.in  canister_ids_icnaming_ledger.in  canister_ids_ledger.in  canister_ids_registrar.in  canister_ids_registrar_control_gateway.in  canister_ids_registry.in  canister_ids_resolver.in  principal_registrar_admin.in  principal_state_exporter.in  principal_timer_trigger.in
src/configs/production/: canister_ids_favorites.in  canister_ids_icnaming_ledger.in  canister_ids_ledger.in  canister_ids_registrar.in  canister_ids_registrar_control_gateway.in  canister_ids_registry.in  canister_ids_resolver.in  names_astrox_me_event.in  principal_registrar_admin.in  principal_state_exporter.in  principal_timer_trigger.in
src/configs/staging/: canister_ids_astrox_me.in  canister_ids_favorites.in  canister_ids_icnaming_ledger.in  canister_ids_registrar.in  canister_ids_registrar_control_gateway.in  canister_ids_registry.in  canister_ids_resolver.in  names_astrox_me_event.in  principal_registrar_admin.in  principal_timer_trigger.in
src/env_configs/: dev.canister_ids.env  dev.config.env  dev.principals.env  itdev.canister_ids.env  itdev.config.env  production.canister_ids.env  production.config.env  production.principals.env  staging.canister_ids.env  staging.config.env  staging.principals.env
src/ic-dev-kit/pem/: default.pem  icnaming_main.pem  icnaming_miner.pem  icnaming_state_exporter.pem  icnaming_timer_trigger.pem
src/icnaming_ledger/: Cargo.toml  dfx.json  rust-toolchain.toml
src/quota_import_data/: 20220223_astrox_me_event.csv  20220223_astrox_me_event.hash  20220223_astrox_me_event.zlib  20220223_test_net_early_bird.csv  20220223_test_net_early_bird.hash  20220223_test_net_early_bird.zlib  20220223_twitter_retweet.csv  20220223_twitter_retweet.hash  20220223_twitter_retweet.zlib  20220228_mainnet_countdown_advise.csv  20220228_mainnet_countdown_advise.hash  20220228_mainnet_countdown_advise.zlib  20220310_mainnet_enhancement_report.csv  20220310_mainnet_enhancement_report.hash  20220310_mainnet_enhancement_report.zlib  20220310_reserved_name_assignment.csv  20220310_reserved_name_assignment.hash  20220310_reserved_name_assignment.zlib  20220314_extra_benefits.csv  20220314_extra_benefits.hash  20220314_extra_benefits.zlib  20220315_reward_dfinitysz.csv  20220315_reward_dfinitysz.hash  20220315_reward_dfinitysz.zlib  20220316_reserved_name_assignment_secret_box.csv  20220316_reserved_name_assignment_secret_box.hash  20220316_reserved_name_assignment_secret_box.zlib  20220317_secret_box.csv  20220317_secret_box.hash  20220317_secret_box.zlib  20220318_feedback_rewards.csv  20220318_feedback_rewards.hash  20220318_feedback_rewards.zlib  20220319_dc_ama_rewards.csv  20220319_dc_ama_rewards.hash  20220319_dc_ama_rewards.zlib  20220320_rewards.csv  20220320_rewards.hash  20220320_rewards.zlib  20220325_quotas_for_refund.csv  (+4 more)
src/reserved/: astrox_me_reserved.txt  grant.url  icapp.url  icp123.url  main.py  projects.csv  projects.csv.bak  reserved.csv  reserved.json  reserved.json.bak  reserved.txt  reserved_list.csv  reserved_list.txt  showcase.url
src/reserved/projects/: 20220107.json  grant_20220107.json  icapp_20220109.json  icp123_20220109.json  showcase_20220109.json
src/scripts/: .gitignore  build_all.ts  create_identities.ts  create_package.ts  export_state.ts  generate.ts  generate_resolver_operation.ts  import_resolver_operation.ts  index.ts  load_state.ts  load_test_ledger.ts  reinstall_all.ts  reinstall_icnaming_ledger.ts  reinstall_ledger.ts  run_tasks.ts  update_did.ts  update_local_configs.ts
src/scripts/features/: favorites.feature  icnaming_ledger.feature  icnaming_ledger_payment.feature  registrar.feature  registrar_control_gateway.feature  registrar_import_name.feature  registrar_nft.feature  registrar_nft_query.feature  registrar_nft_transfer.feature  registrar_quota_management.feature  registrar_register_name_with_quota.feature  registrar_registrer_name_by_payment.feature  registrar_registrer_name_by_payment1.feature  registrar_registrer_name_by_payment2.feature  registrar_renew_name.feature  registrar_transaction.feature  registry.feature  resolver.feature  resolver_import_record.feature
src/scripts/src/: tasks.ts
src/scripts/wasm/: dft_basic.did  dft_basic.wasm  ledger-canister.wasm
(+230 files in other folders)
