[workspace]
members = [
    "common/common",
    "common/test_common",
    "canisters/cycles_minting",
    "canisters/registrar",
    "canisters/icnaming_ledger",
    "canisters/registrar_control_gateway",
    "canisters/registry",
    "canisters/favorites",
    "canisters/resolver",
]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'


