[workspace]
members = [
    "common/common",
    "common/test_common",
    "common/build_common",
    "common/common_actor",
    "canisters/cycles_minting",
    "canisters/naming_marketplace",
    "canisters/mystery_box",
    "canisters/registrar",
    "canisters/registrar_control_gateway",
    "canisters/registry",
    "canisters/favorites",
    "canisters/resolver",
]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
