[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
candid = "0.7.10"
serde = "1.0.130"
serde_bytes = "0.11"
anyhow = "1.0.53"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.52"
url = "2.2.2"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.12.0"
