[package]
name = "cycles_minting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
candid = "0.7.13"
serde = "1.0.136"
serde_bytes = "0.11"
async-trait = "0.1.52"
common = { path = "../../common/common", default-features = false }
log = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2.14"
getset = "0.1.2"

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
async-std = { version = "1.11", features = ["attributes"] }
rstest = "0.12.0"

[features]
default = ["dev_canister"]
dev_canister = ["common/dev_canister"]
staging_canister = ["common/staging_canister"]
production_canister = ["common/production_canister"]