[package]
name = "favorites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
candid = "0.7.11"
serde = "1.0.136"
serde_bytes = "0.11"
common = { path = "../../common/common" , default-features = false}
log = "0.4"
url = "2.2.2"


[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
rstest = "0.12.0"
async-std = { version = "1.10", features = ["attributes"] }


[features]
default = ["dev_canister"]
dev_canister = ["common/dev_canister"]
staging_canister = ["common/staging_canister"]
production_canister = ["common/production_canister"]