[package]
name = "favorites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
candid = "0.7.18"
serde = "1.0.159"
serde_bytes = "0.11"
common = { path = "../../common/common", default-features = false }
log = "0.4"
url = "2.3.1"

[dev-dependencies]
env_logger = "0.9.1"
test_common = { path = "../../common/test_common" }
rstest = "0.15.0"
async-std = { version = "1.12", features = ["attributes"] }

[build-dependencies]
anyhow = "1.0.65"
build_common = { path = "../../common/build_common" }

[features]
default = []
dev_env = []
