[package]
name = "icnaming_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
candid = "0.7.14"
serde = "1.0.137"
serde_bytes = "0.11"
common = { path = "../../common/common", default-features = false }
log = "0.4"
url = "2.2.2"
num-traits = "0.2.15"
flate2 = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
rstest = "0.12.0"
async-std = { version = "1.11", features = ["attributes"] }
csv = "1.1.6"

[features]
default = ["dev_canister"]
dev_canister = ["common/dev_canister"]
staging_canister = ["common/staging_canister"]
production_canister = ["common/production_canister"]

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git"] }
anyhow = "1.0.57"
