[package]
name = "registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
candid = "0.7.12"
serde = "1.0.136"
serde_bytes = "0.11"
async-trait = "0.1.52"
common = { path = "../../common/common", default-features = false }
log = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2.14"
getset = "0.1.2"
once_cell = "1.9"
ic-crypto-sha256 = { git = "https://github.com/dfinity/ic", rev = "89446f5a04f053040b4863eab5458446d925ed0e" }
hex = "0.4.3"
flate2 = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
async-std = { version = "1.10", features = ["attributes"] }
rstest = "0.12.0"

[features]
default = ["dev_canister"]
dev_canister = ["common/dev_canister"]
staging_canister = ["common/staging_canister"]
production_canister = ["common/production_canister"]

[build-dependencies]
ic-crypto-sha256 = { git = "https://github.com/dfinity/ic", rev = "89446f5a04f053040b4863eab5458446d925ed0e" }
hex = "0.4.3"
flate2 = "1.0"
