[package]
name = "registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
candid = "0.7.14"
serde = "1.0.137"
serde_bytes = "0.11"
async-trait = "0.1.53"
common = { path = "../../common/common", default-features = false }
log = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2.15"
getset = "0.1.2"
once_cell = "1.9"
hex = "0.4.3"
flate2 = "1.0"
time = "0.3.9"

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
async-std = { version = "1.11", features = ["attributes"] }
rstest = "0.12.0"
csv = "1.1.6"

[build-dependencies]
anyhow = "1.0.57"
build_common = { path = "../../common/build_common" }


[features]
default = []
dev_env = []
