[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
candid = "0.7.14"
serde = "1.0.137"
serde_bytes = "0.11"
common = { path = "../../common/common", default-features = false }
log = "0.4"
url = "2.2.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
ic-crypto-sha256 = { git = "https://github.com/dfinity/ic", rev = "89446f5a04f053040b4863eab5458446d925ed0e" }

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
async-std = { version = "1.11", features = ["attributes"] }
rstest = "0.12.0"

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git"] }
anyhow = "1.0.57"
