[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
candid = "0.7.16"
serde = "1.0.144"
serde_bytes = "0.11"
common = { path = "../../common/common", default-features = false }
log = "0.4"
url = "2.3.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
sha2 = "0.10.5"

[dev-dependencies]
env_logger = "0.9.0"
test_common = { path = "../../common/test_common" }
async-std = { version = "1.12", features = ["attributes"] }
rstest = "0.15.0"

[build-dependencies]
anyhow = "1.0.64"
build_common = { path = "../../common/build_common" }

[features]
default = []
dev_env = []
