[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
candid = "0.7.14"
serde = "1.0.136"
serde_bytes = "0.11"
anyhow = "1.0.57"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.53"
url = "2.2.2"
num-bigint = "0.4.3"
yansi = "0.5.1"
once_cell = "1.9"
flate2 = "1.0"
ic-crypto-sha256 = { git = "https://github.com/dfinity/ic", rev = "89446f5a04f053040b4863eab5458446d925ed0e" }
hex = "0.4.3"
crc32fast = "1.3.2"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.12.0"


[features]
default = []
dev_canister = []
staging_canister = []
production_canister = []

