[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
candid = "0.7.18"
serde = "1.0.144"
serde_bytes = "0.11"
anyhow = "1.0.65"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.57"
url = "2.3.1"
num-bigint = "0.4.3"
yansi = "0.5.1"
once_cell = "1.14"
flate2 = "1.0"
const_env = "0.1.2"
sha2 = "0.10.6"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.15.0"

[build-dependencies]
anyhow = "1.0.65"
build_common = { path = "../build_common" }
