[package]
name = "common_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
candid = "0.7.15"
serde = "1.0.139"
serde_bytes = "0.11"
async-trait = "0.1.56"
common = { path = "../common"}
log = "0.4"
once_cell = "1.13"

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git"] }
anyhow = "1.0.58"
