[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
candid = "0.7.14"
serde = "1.0.137"
serde_bytes = "0.11"
common = { path = "../common" }
log = "0.4"
env_logger = "0.9.0"
mockall = "0.11.1"
async-trait = "0.1.56"
rstest = "0.14.0"
hex = "0.4.3"
crc32fast = "1.3.2"
